--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+#Firebase related (can be regenerated with `flutterfire configure`)
+lib/firebase_options.dart
+firebase.json
