--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^3.15.2
   cloud_firestore: ^5.1.0
   provider: ^6.1.5+1
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
